biscuit-terminal/lib/tests/snapshots/layout_matrix__Todo__border_thin_left.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER
[⏺] Review pull request #42
---
VIA_TREE_DIRECT
│[⏺] Review pull request #42
